@@ -1,5 +1,9 @@
 2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Win_GParted.cc: i just can't stop tweaking the operationslist =)
+
+2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/Device.cc (Read_Disk_Layout): logic unallocated space wasn't read correctly, fixed.
 	* include/Win_GParted.h: added open_operationslist() and menu_view_operations() .
 	* src/Win_GParted.cc: tweaked operationlist behaviour a bit. Also added 'Operations" toggle-item to View menu.
